--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,14 @@ h1 {
   position: absolute;
   font-size: 2.0em;
   color: #000;
-  font-family: 'Almarai', sans-serif;
+  font-family: 'Candara', sans-serif;
   font-style: italic;
 }
 
 h2 {
   position: absolute;
   width: 500px;
-  font-family: 'Rock  Salt', sans-serif;
+  font-family: 'Candara', sans-serif;
   font-weight: 100;
   font-size: 0.9em;
   line-height: 25px;
@@ -99,7 +99,7 @@ a:hover {
 
 .tab button {
   color: #a1a6ab;
-  font-family: 'Helvetica Neue';
+  font-family: 'Lucida Sans';
   background-color: inherit;
   border: none;
   outline: none;
