--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ h1 {
 h2 {
   position: absolute;
   width: 500px;
-  font-family: 'Candara', sans-serif;
-  font-weight: 300;
+  font-family: 'Futara', sans-serif;
+  font-weight: 250;
   font-size: 0.9em;
   line-height: 25px;
   color: #333333;
