--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1 {
 h2 {
   position: absolute;
   width: 500px;
-  font-family: 'Candara', sans-serif;
+  font-family: 'Calibri', sans-serif;
   font-weight: 250;
   font-size: 0.9em;
   line-height: 25px;
