--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@ h1 {
 h2 {
   position: absolute;
   width: 500px;
-  font-family: 'Calibri', sans-serif;
-  font-weight: 250;
-  font-size: 0.9em;
+  font-family: 'Verdana', sans-serif;
+  font-weight: 300;
+  font-size: 1em;
   line-height: 25px;
   color: #333333;
 }
