--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,16 @@ h2 {
   color: #333333;
 }
 
+h3 {
+  position: absolute;
+  width: 400px;
+  font-family: 'Verdana', sans-serif;
+  font-weight: 300;
+  font-size: 0.7em;
+  line-height: 25px;
+  color: #333333;
+}
+
 .emphasis {
   font-weight: 600;
   position: relative;
