--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 h3 {
-  position: absolute;
+  position: relative;
   width: 400px;
   font-family: 'Verdana', sans-serif;
   font-weight: 300;
