--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,15 @@ img {
   margin-left: 550px;
 }
 
+.img {
+  /* display:block; */
+  width: 180px;
+  height: 180px;
+  margin-top: 60px;
+  margin-left: 550px;
+  /* object-fit: contain; */
+}
+
 .tab {
   position: absolute;
   top: 10%;
