--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,14 @@ img {
 
 .body {
   width: 600px;
+  height: 100px;
+  display: block;
+  margin-left: 130px;
+  margin-top: 15%;
+}
+
+.longbody {
+  width: 600px;
   height: 1000px;
   display: block;
   margin-left: 130px;
