--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ img {
 }
 
 a {
-  color: #0055fead;
+  color: #4d87fb;
   background-color: transparent;
   text-decoration: underline;
   transition: 0.2s;
@@ -110,8 +110,9 @@ a:hover {
 }
 
 .tab button {
-  color: #a1a6ab;
-  font-family: 'Lucida Sans';
+  color: #5e94ca;
+  font-family: 'Verdana', sans-serif;
+  font-size: 1.2em;
   background-color: inherit;
   border: none;
   outline: none;
@@ -126,5 +127,5 @@ a:hover {
 }
 
 .tab button.active {
-  color: #333333;
+  color: #030f97;
 }
