--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,9 @@ img {
 .profile-crop {
   position: absolute;
   width: 180px;
-  height: 180px;
+  height: 250px;
   overflow: hidden;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   margin-top: 30px;
   margin-left: 550px;
 }
@@ -91,11 +91,16 @@ img {
 
 .tab {
   position: absolute;
-  top: 10%;
-  left: 20px;
+  top: 2%; /* Adjust as needed for exact positioning */
+  left: 0;
+  width: 100%; /* Make the tab container span the full width */
   overflow: hidden;
-  width: 130px;
+  display: flex; /* Use flexbox to arrange items horizontally */
+  justify-content: center; /* Center the buttons horizontally */
+  flex-wrap: wrap; /* Allow items to wrap if needed */
   list-style: none;
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margins */
 }
 
 a {
@@ -112,14 +117,15 @@ a:hover {
 .tab button {
   color: #5e94ca;
   font-family: 'Verdana', sans-serif;
-  font-size: 1.2em;
+  font-size: 1.2em; /* Adjust font size as needed */
   background-color: inherit;
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 10px 14px;
+  padding: 10px 20px; /* Adjust padding as needed */
   transition: 0.3s;
-  border-radius: 16px;
+  border-radius: 0; /* Optional: Remove border radius if desired for a squared look */
+  margin: 7px; /* Optional: Add some space between buttons */
 }
 
 .tab button:hover {
